--- a/Historia.html
+++ b/Historia.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mitologia Nórdica - Mitos e Lendas Épicas</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/CSS/historia.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
@@ -14,13 +14,13 @@
 <body>
     <header>
         <div class="header-content">
-            <h1>Mitologia Nórdica <span class="rune">&#5842;&#5845;&#5846;&#5848;&#5847;&#5849;</span></h1>
+            <h1>Histórias <span class="rune">&#5842;&#5845;&#5846;&#5848;&#5847;&#5849;</span></h1>
             <p>Os Mitos e as Lendas da Mitologia Nórdica</p>
         </div>
         <nav>
             <ul>
-                <li><a href="#Ragnarök">Ragnarök</a></li>
-                <li><a href="#deuses">Queda Balder</a></li>
+                <li><a href="#Queda Balder">Queda Balder</a></li>
+                <li><a href="#A Trapaça de Loki">A Trapaça de Loki</a></li>
                 <li><a href="#mitos">Jormungandr</a></li>
                 <li><a href="#mundos">Nove Mundos</a></li>
                 <li><a href="#criaturas"></a></li>
@@ -29,74 +29,66 @@
             </ul>
         </nav>
     </header>
-    <section id="mitos">
-        <h2>Mitos e Lendas Épicas</h2>
+<main>
+        <section id="Queda Balder">
+        <h2>⚔️ A Morte de Balder — O Brilho que Antecede a Escuridão</h2>
+        <p>Balder era amado como ninguém em Asgard.
+Não apenas por ser justo — mas porque nele havia uma luz que mantinha o caos afastado.
+Quando Balder sorria, os ventos eram suaves.
+Quando falava, até as lâminas pareciam menos frias.
+Mas até a luz sonha com a escuridão.
+E Balder começou a ter sonhos.
+Sonhos de fogo.
+Sonhos de morte.
+Sonhos de um frio tão profundo que nem os deuses ousavam nomear.
+Odin ouviu seus murmúrios à noite.
+Frigg chorava enquanto buscava, nos nove mundos, qualquer coisa que pudesse ferir seu filho —
+e fez toda existência jurar nunca tocar Balder.
+Mas uma planta pequena… frágil… ignorada…
+permaneceu em silêncio.
+O visco.
+Uma raiz tão simples que ninguém temia.
+Exceto um.
+Aquele que teme o silêncio mais do que a morte.
+Loki.</p>
+        <img src="IMG2/Baldur death.webp" alt="" class="baldur-inicio">
 
-        <li>
-            <strong>Ragnarök:</strong> Inicia com Fimbulwinter (inverno de três anos), seguido por batalhas onde Odin é
-            devorado por Fenrir, Thor mata Jormungandr mas sucumbe ao veneno.
-            <img src="https://www.ancient-origins.net/sites/default/files/styles/article_image/public/field/image/Equals-Doom-or-Twilight-for-Norse-Gods.jpg?itok=9deAhx8E"
-                alt="Cena da batalha do Ragnarök" class="mito-img">
-        </li>
-        <li>
+        </section>
 
-            </ul>
+    <section id="A Trapaça de Loki"></section>
+    <h2>🌿 A Trapaça de Loki</h2>
+    <p>Quando Loki descobriu que apenas o visco não havia jurado proteger Balder, um sorriso escuro cruzou seu rosto. O deus da trapaça arrancou a planta e moldou dela uma simples seta. Simples, porém mortal.
+No grande salão, os deuses se divertiam com a invulnerabilidade de Balder.
+Jogavam machados, lanças, espadas — tudo ricocheteava como se o deus fosse feito de luz pura.
+Mas no canto, em silêncio, estava Hodr, o irmão cego de Balder.
+Loki aproximou-se dele como um sussurro venenoso:
+— “Por que não participa do jogo, Hodr? Deixe-me guiá-lo. Use esta flecha.”
+Hodr sorriu, acreditando que estava incluído na brincadeira.
+Loki apontou sua mão.
+A flecha voou.
+E, pela primeira vez, algo atravessou Balder.
+O salão ficou mudo.
+A luz caiu.
+Balder tombou.</p>
+<img src="IMG/Loki.jpg" alt="" class="Loki-trap">
+
+    <section id="Queda Luz">
+        <h2>🌑 A Queda da Luz</h2>
+        <p>Asgard inteiro chorou.
+Frigg caiu de joelhos.
+Odin enxergou, naquele instante, que Balder não era apenas seu filho —
+ele era o último brilho antes da escuridão final.
+Os deuses enviaram Hermod até Helheim para negociar sua libertação.
+A deusa Hel concordou… mas exigiu que todas as coisas vivas e mortas do universo chorassem por Balder.
+E tudo chorou.
+Corvos, rochas, árvores, homens, gigantes, até as paredes de cavernas se umedeceram.
+Mas uma única criatura se recusou:
+Uma giganta coberta por véus —
+mas sua risada traía sua verdadeira identidade.
+Loki.
+Por causa dele, Balder permaneceu morto.</p>
     </section>
-    <style>
-        ul,
-        ol {
-            list-style-type: none;
-            padding: 0;
-        }
+</main>   
 
-        ul li,
-        ol li {
-            background: rgba(0, 0, 0, 0.75);
-            margin: 20px 0;
-            padding: 20px;
-            border-left: 8px solid #d4af37;
-            border-radius: 8px;
-        }
-
-        h2 {
-            font-family: 'Cinzel', serif;
-            color: #d4af37;
-            font-size: 3em;
-            border-bottom: 4px solid #4a2c0b;
-            padding-bottom: 15px;
-            text-shadow: 2px 2px 5px #000;
-        }
-
-        nav ul {
-            list-style: none;
-            padding: 0;
-            margin: 20px 0 0;
-        }
-
-        nav ul li {
-            display: inline-block;
-            margin: 0 25px;
-        }
-
-        nav ul li a {
-            color: #fff;
-            text-decoration: none;
-            font-weight: bold;
-            font-size: 1.2em;
-            transition: color 0.3s, transform 0.3s;
-        }
-
-        nav ul li a:hover {
-            color: #d4af37;
-            transform: scale(1.15);
-        }
-
-        .mito-img {
-            width: 100%;
-            height: auto;
-            border-radius: 10px;
-            margin-bottom: 20px;
-            border: 2px solid #b8932e;
-        }
-    </style>
 </body>
+</html>
