--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                    <h2>Os Nove Mundos de Yggdrasil</h2>
             <p><h3>Mapa Interativo</h3>Yggdrasil, a freixo cósmica, é habitada por criaturas como a águia Vedrfolnir, o falcão no topo, e o esquilo Ratatoskr que leva insultos entre Nidhogg e a águia.</p>
              <div class="map-wrap" aria-label="Mapa dos 9 Mundos Yggdrasil">
-                <img src="/Mitologic_Nordic-main/IMG/9 mundos.webp" alt="Ilustração de Yggdrasil, a árvore do mundo" class="map-wrap">
+                <img src="IMG/9 mundos.webp" alt="Ilustração de Yggdrasil, a árvore do mundo" class="map-wrap">
                 
                 <button class="hotspot" data-modal="modal-asgard" aria-label="Asgard" style="top: 11%; left: 47%;"></button>
 
