--- a/Historia.html
+++ b/Historia.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mitologia Nórdica - Mitos e Lendas Épicas</title>
-    <link rel="stylesheet" href="/CSS/historia.css">
+    <link rel="stylesheet" href="CSS/historia.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel:wght@400;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,700;1,400&display=swap"
         rel="stylesheet">
@@ -21,11 +21,11 @@
             <ul>
                 <li><a href="#Queda Balder">Queda Balder</a></li>
                 <li><a href="#A Trapaça de Loki">A Trapaça de Loki</a></li>
-                <li><a href="#mitos">Jormungandr</a></li>
-                <li><a href="#mundos">Nove Mundos</a></li>
-                <li><a href="#criaturas"></a></li>
-                <li><a href="#artefatos">Artefatos</a></li>
-                <li><a href="#runas">Runas e Magia</a></li>
+                <li><a href="#Queda Luz">Queda Luz</a></li>
+                <li><a href="#Hel">Hel</a></li>
+                <li><a href="#Fenrir">Fenrir</a></li>
+                <li><a href="#Surtr">Surtr</a></li>
+                <li><a href="#Ragnarok">Ragnarök</a></li>
             </ul>
         </nav>
     </header>
@@ -51,7 +51,7 @@ Uma raiz tão simples que ninguém temia.
 Exceto um.
 Aquele que teme o silêncio mais do que a morte.
 Loki.</p>
-        <img src="IMG2/Baldur death.webp" alt="" class="baldur-inicio">
+        <img src="IMG/Baldur death.webp" alt="" class="baldur-inicio">
 
         </section>
 
@@ -87,6 +87,62 @@ Uma giganta coberta por véus —
 mas sua risada traía sua verdadeira identidade.
 Loki.
 Por causa dele, Balder permaneceu morto.</p>
+    <img src="IMG/A queda da luz.jpg " alt="" class="aqueda">
+    </section>
+
+    <section id="Hel">
+        <h2>HEL, A GUARDIÃ DOS MORTOS</h2>
+        <p>Entre as sombras frias de Niflheim, onde a luz do sol jamais chega, reina Hel — filha de Loki, metade viva, metade cadáver.
+Quando Balder caiu, seu espírito atravessou o véu e desceu ao salão silencioso de Hel. A deusa o recebeu com calma sombria, sabendo que sua presença marcava o início do desequilíbrio.
+Os deuses imploraram por sua libertação, e Hel impôs uma condição impossível: que todas as coisas do mundo chorassem por Balder.
+E quase choraram.
+Quase.
+Apenas uma criatura — disfarçada por Loki — recusou-se a derramar lágrimas.
+Assim, Hel selou o destino de Balder… e o início do fim foi confirmado</p>
+    <img src="IMG/Death.jpg" alt="" class="Hel">
+    </section>
+
+    <section id="Fenrir">
+        <h2>FENRIR, O LOBO DO DESTINO</h2>
+        <p>Nascido da astúcia de Loki e do caos primordial, Fenrir cresceu rápido demais. Forte demais. Terrível demais.
+Os deuses, temendo o futuro que a profecia anunciava, tentaram contê-lo com correntes de ferro e magia. Todas se romperam.
+Então forjaram Gleipnir — uma fita fina como seda, mas feita do impossível:
+o som dos passos de um gato,
+a barba de uma mulher,
+a respiração de um peixe…
+E enganaram o lobo. Tyr, o único que ousava se aproximar, sacrificou sua própria mão para que a trapaça se concretizasse.
+Preso, Fenrir aguardou em fúria silenciosa, sabendo que um dia se libertaria.
+E quando isso acontecesse… Odin cairia diante de seus dentes.</p>
+    <img src="IMG/Fenrir2.png" alt="" class="Fenrir">
+    </section>
+
+    <section id="Surtr">
+        <h2>SURTR, O SENHOR DAS CHAMAS</h2>
+        <p>Do coração ardente de Muspelheim, onde o fogo é mais antigo que os próprios deuses, ergue-se Surtr — o gigante flamejante.
+Com sua espada de fogo eterno, ele aguarda pacientemente o dia em que marchará contra Asgard.
+Enquanto os deuses se ocupam com sonhos, guerras e profecias, Surtr permanece imóvel, como uma montanha de brasas vivas, esperando apenas o som do Gjallarhorn.
+Seu destino não é governar, nem destruir por prazer.
+Seu destino… é consumar o ciclo.
+Pois quando sua lâmina for erguida, o céu se abrirá em chamas e os Nove Reinos serão tragados pelo fogo primordial.</p>
+    <img src="IMG/Surtr.webp" alt="" class="Surtr">
+    </section>
+
+    <section id="Ragnarok">
+        <h2>RAGNARÖK — O FIM E O RECOMEÇO</h2>
+        <p>Quando Heimdall elevar o Gjallarhorn aos céus, seu som ecoará por todos os mundos.
+As correntes se romperão. Fenrir escapará.
+Jormungandr emergirá do mar, envenenando o céu.
+Os mortos marcharão sob as ordens de Hel.
+Surtr avançará com sua espada flamejante, rachando a terra.
+E os deuses partirão para sua última batalha.
+Odin enfrentará Fenrir. Thor enfrentará a serpente. Loki e Heimdall lutarão até caírem juntos.
+Asgard ruirá. O mundo será engolido por fogo, água e trevas.
+
+Mas não é o fim.
+Das cinzas surgirá um novo mundo, verde, puro e silencioso…
+E nele caminharão os sobreviventes.
+Porque todo fim, na mitologia nórdica, é apenas o primeiro passo para o recomeço.</p>
+    <img src="IMG/Ragnarok2.png" alt="" class="Ragnarok">
     </section>
 </main>   
 
