--- a/Historia.html
+++ b/Historia.html
@@ -142,7 +142,7 @@ Mas não é o fim.
 Das cinzas surgirá um novo mundo, verde, puro e silencioso…
 E nele caminharão os sobreviventes.
 Porque todo fim, na mitologia nórdica, é apenas o primeiro passo para o recomeço.</p>
-    <img src="IMG/Ragnarok2.png" alt="" class="Ragnarok">
+    <img src="IMG/Ragnarok2 (1).png" alt="" class="Ragnarok">
     </section>
 </main>   
 
